--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Map</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/style.css"></link>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <script src="app.js" type="module"></script>
     <style>
@@ -16,17 +18,18 @@
 
        #map{
            width: 100vw;
-           height: 100vh;
+           height: 90vh;
 
           }
     </style>
 
 </head>
 <body>
+    <div id="banner">
     <div>let's get tracking</div>
-    <button id="start" >Start</button>
-    <button id="stop" >Stop</button>
-    
+    <button style="height:20px;width:50px" id="start" >Start</button>
+    <button style="height:20px;width:50px" id="stop" >Stop</button>
+    </div>
 
     <div id="map"></div>
     
