--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,23 @@
        #map{
            width: 100vw;
            height: 90vh;
-
           }
+       #start{
+        height:40px;
+        width:70px;  
+       }
+       #stop{
+        height:40px;
+        width:70px;
+       }
     </style>
 
 </head>
 <body>
     <div id="banner">
     <div>let's get tracking</div>
-    <button style="height:20px;width:50px" id="start" >Start</button>
-    <button style="height:20px;width:50px" id="stop" >Stop</button>
+    <button  id="start" >Start</button>
+    <button  id="stop" >Stop</button>
     </div>
 
     <div id="map"></div>
