--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
 </head>
 <body>
     <div id="banner">
-    <div>let's get tracking</div>
+    <div>let's get tracking(click once then again to see map)</div>
     <button  id="start" >Start</button>
-   
+    
     </div>
 
     <div id="map"></div>
